# hisab_kitab

./: .gitignore  hisab_kitab.db  main.py  pyproject.toml  requirements.txt  setup.sh
backend/: security.py
backend/api/v1/: accounts_router.py  auth_router.py  entries.py  entries_router.py  users_router.py
backend/core/: config.py  database.py  exceptions.py  logging.py
backend/middlewares/: auth_middleware.py
backend/models/: model.py
backend/repositories/: account_repo.py  entry_repo.py  user_repo.py
backend/schemas/: account.py  auth_schema.py  entry_schema.py  user_schema.py
backend/services/: account_service.py  auth_service.py  entry_service.py  user_service.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  font.css  index.css
frontend/src/components/: HisabKitabLogo.jsx  Modal.jsx
frontend/src/components/Account/: AccountForm.jsx  AccountList.jsx
frontend/src/components/Entry/: EntryForm.jsx  EntryList.jsx
frontend/src/hooks/: useAccountEntries.js
frontend/src/pages/: AccountDetailPage.jsx  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/utils/: api.js
